add tinyPNG format

--- a/aboutme.html
+++ b/aboutme.html
@@ -76,7 +76,7 @@
                 <div class="info d-flex flex-row">
 
                     <div class="right" data-aos="fade-up" data-aos-duration="2500">
-                        <img class="myPic" class="flex-fill justify-content-between align-items-center" src="images/vaish.JPG">
+                        <img class="myPic" class="flex-fill justify-content-between align-items-center" src="images/icons/protfolioTinypng/vaish.JPG">
                     </div>
 
                     <div class="left" class="flex-fill justify-content-between align-items-center">
