--- a/aboutme.html
+++ b/aboutme.html
@@ -20,10 +20,14 @@
         h5 {
             color: #000000;
         }
+        
+        img {
+            border-radius: 6%;
+        }
     </style>
 </head>
 
-<body style="background-color: aliceblue;" class="about" id="bodyOpac">
+<body style="background-color: rgb(255, 255, 255);" class="about" id="bodyOpac">
     <div class="d-flex h-100 mx-auto flex-column">
         <header class="masthead mb-auto">
 
@@ -85,15 +89,22 @@
                                 <strong>My journey</strong>
                             </h3>
                         </div>
-                        <div data-aos="fade-up" data-aos-duration="2500">
+                        <div data-aos="fade-up" data-aos-duration="2500" class="pt-2">
 
-                            <p class="skill p-4">
-                                I'm a former Metallurgist with passion towards design and currently residing in Warangal, India. I recently shifted my career into a full time junior frontend developer in the process of rediscovering my creative outlets. I strive to create usable and
-                                polished products through passionate and deliberate design.
-                                <br> A childhood curiosity of learning how to type and the other using virtual “lego” interfaced code blocks to build a functional code that lights a bulb or moves the toy according to the instructions, had set me gradually
-                                on to the path of design.
-                                <br> Though I come from an Engineering background as a metallurgist, who is fascinated by the planning of creation might someday also get a chance to infuse these vast fields into one to obtaining solutions that attune
-                                in the global community in usable and economically viable.
+                            <p class="ml-3 mr-3">
+                                I'm a UI/UX designer, a former Metallurgist and currently residing in Warangal, India. I recently shifted my career into a full time junior frontend developer in the process of rediscovering my creative outlets. I strive to create usable and polished
+                                products through passionate and deliberate design.
+                            </p>
+
+                            <br>
+                            <p class="ml-3 mr-3">
+                                Through childhood curiosity - of learning how to type and the other using virtual “lego” interfaced code blocks to build a functional code that lights a bulb or moves the toy according to the instructions, had set me gradually on to the path of design.
+                            </p>
+
+                            <br>
+                            <p class="ml-3 mr-3">
+                                Though I come from an Engineering background, I'm fascinated in the process of creation, might someday also get a chance to infuse these vast fields of into one to obtaining solutions that attune in the global community in usable and economically viable
+                                sorts.
                             </p>
                         </div>
                     </div>
@@ -113,39 +124,60 @@
                         </h4>
                     </div>
                     <div class="container p-4">
-
-                        <div class="row">
+                        <div class="row pb-3">
                             <div class="col" data-aos="fade-up" data-aos-duration="2500">
-                                <h5>Freelance Designer</h5>
-                                <p>2020</p>
+                                <div class="row p-0">
+                                    <div>
+                                        <img class="pb-2 m-0" width="54" src="images/icons/bravelogo.png">
+                                    </div>
+                                    <div class="col p-0">
+                                        <h5 class="pl-4">Designer</h5>
+                                        <p class="pl-4" style="font-size: 14px !important;">BraveOrbit</p>
+                                        <p class="pl-4" style="font-size: 12px !important;">2020</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col p-4" data-aos="fade-up" data-aos-duration="2500">
+                            <div class="col pl-4" data-aos="fade-up" data-aos-duration="2500">
                                 <p>
-                                    Currently freelancing as a frontend developer and web designer.
+                                    After working as a freelancer for about three months has been give an oppurtunity to work as UI/UX designer along with slight frontend development on contract basis. Up-untill now I've worked on projects like Akro, Medizen, BraveOrbit website.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row pb-3">
+                            <div class="col" data-aos="fade-up" data-aos-duration="2500">
+                                <div class="row p-0">
+                                    <div>
+                                        <img class="pb-2 m-0" width="54" src="images/icons/viperlogo.png">
+                                    </div>
+                                    <div class="col p-0">
+                                        <h5 class="pl-4">Developer</h5>
+                                        <p class="pl-4" style="font-size: 14px !important;">Viperdev</p>
+                                        <p class="pl-4" style="font-size: 12px !important;">2019</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col pl-4" data-aos="fade-up" data-aos-duration="2500">
+                                <p>
+                                    As a Junior frontend developer Intern I had an oppurtunity to work on wide variety of projects and simultaneously handle the design aspects of the projects.
                                 </p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col" data-aos="fade-up" data-aos-duration="2500">
-                                <h5>Junior Frontend Developer</h5>
-                                <p>Viperdev</p>
-                                <p>2019</p>
+                                <div class="row p-0">
+                                    <div>
+                                        <img class="pb-2 m-0" width="54" src="images/icons/jslLogo.png">
+                                    </div>
+                                    <div class="col p-0">
+                                        <h5 class="pl-4">Engineer</h5>
+                                        <p class="pl-4" style="font-size: 14px !important;">Jindal Stainless Ltd.</p>
+                                        <p class=" pl-4" style="font-size: 12px !important; ">2018-2019</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col p-4" data-aos="fade-up" data-aos-duration="2500">
+                            <div class="col pl-4" data-aos="fade-up " data-aos-duration="2500">
                                 <p>
-                                    As an Intern I had an oppurtunity in working on wide variety of projects.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col" data-aos="fade-up" data-aos-duration="2500">
-                                <h5>Quality Assurance Associate</h5>
-                                <p>Jindal Stainless Ltd.</p>
-                                <p>2018-2019</p>
-                            </div>
-                            <div class="col p-4" data-aos="fade-up" data-aos-duration="2500">
-                                <p>
-                                    Just after my graduation, I worked for JSl in the Quality department
+                                    At JSL as Graduate Engineer Trainee, I was assigned to the team of central quality steel techno group where i was responsible for producing improved products through research and development that best aligns with client's requirements
                                 </p>
                             </div>
                         </div>
@@ -156,11 +188,11 @@
                                 Projects
                             </h4>
                         </div>
-                        <div class="p-4">
-                            <div class="row">
-                                <div class="col" data-aos="fade-up" data-aos-duration="2500">
+                        <div class="p-4 ">
+                            <div class="row ">
+                                <div class="col " data-aos="fade-up " data-aos-duration="2500 ">
                                     <h5>RecycleHero - Viperdev, Hamburg</h5>
-                                    <div class=" p-4" data-aos="fade-up" data-aos-duration="2500">
+                                    <div class=" p-4 " data-aos="fade-up " data-aos-duration="2500 ">
                                         <p>
                                             • Cross- platform application for picking up disposals to recycle, while the user can use their valuable time for rational purposes.
                                             <br>• Explored varied skills in the commencing project, designed and developed the functionalities like Zipcodes Filtering locations, the Pickup-page etc.
@@ -168,10 +200,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col" data-aos="fade-up" data-aos-duration="2500">
+                            <div class="row ">
+                                <div class="col " data-aos="fade-up " data-aos-duration="2500 ">
                                     <h5>GrunderFlirt - Viperdev, Hamburg</h5>
-                                    <div class=" p-4" data-aos="fade-up" data-aos-duration="2500">
+                                    <div class=" p-4 " data-aos="fade-up " data-aos-duration="2500 ">
                                         <p>
                                             • Cross-platform application with specific mobile usage to connect with like-minded aspirants and fetching a job across the prefered location.
                                             <br>• Built and developed application with minimal gesture features and swift navigation.
@@ -180,18 +212,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div data-aos="fade-up" data-aos-duration="2500">
+                            <div class="row ">
+                                <div class="col ">
+                                    <div data-aos="fade-up " data-aos-duration="2500 ">
                                         <h5> Minor Projects - Viperdev, Hamburg</h5>
                                     </div>
-                                    <div class="p-4">
-                                        <div data-aos="fade-up" data-aos-duration="2500">
+                                    <div class="p-4 ">
+                                        <div data-aos="fade-up " data-aos-duration="2500 ">
                                             <p>
                                                 Websites:
                                             </p>
                                         </div>
-                                        <div data-aos="fade-up" data-aos-duration="2500">
+                                        <div data-aos="fade-up " data-aos-duration="2500 ">
                                             <p>
                                                 LetsViperit and DigitiseFast are the websites created on the request of the marketing team for the proceedings of promoting company on digital Platform.
                                             </p>
@@ -206,15 +238,15 @@
                             Skillset
                         </h4>
                     </div>
-                    <div class="container d-flex justify-content-between p-4 align-items-center">
+                    <div class="container d-flex justify-content-between p-4 align-items-center ">
 
-                        <div class="carded">
-                            <div class="skill">
+                        <div class="carded ">
+                            <div class="skill ">
                                 <h5>
                                     <strong>Skills</strong>
                                 </h5>
                             </div>
-                            <div data-aos="fade-up" data-aos-duration="2500">
+                            <div data-aos="fade-up " data-aos-duration="2500 ">
 
                                 <p>
                                     Graphic Designing
@@ -231,13 +263,13 @@
                             </div>
 
                         </div>
-                        <div class="carded">
-                            <div class="skill">
+                        <div class="carded ">
+                            <div class="skill ">
                                 <h5>
                                     <strong>Tools</strong>
                                 </h5>
                             </div>
-                            <div class="text-end" data-aos="fade-up" data-aos-duration="2500">
+                            <div class="text-end " data-aos="fade-up " data-aos-duration="2500 ">
 
                                 <p>
                                     Adobe illustrator
@@ -260,27 +292,27 @@
                         </h4>
                     </div>
 
-                    <div class="pt-4">
-                        <div class="container">
-                            <div class="col">
-                                <div data-aos="fade-up" data-aos-duration="2500">
+                    <div class="pt-4 ">
+                        <div class="container ">
+                            <div class="col ">
+                                <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <h5>National Institute of Technology Durgapur</h5>
                                     <p>2018 - 2014</p>
                                 </div>
-                                <div data-aos="fade-up" data-aos-duration="2500">
+                                <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <p>
                                         Bachelores in Metallurgical and Materials Engineering.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <div class="col">
-                                <div data-aos="fade-up" data-aos-duration="2500">
+                        <div class="container ">
+                            <div class="col ">
+                                <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <h5>Sri Chaitanya Jr College, Vijayawada</h5>
                                     <p>2014 - 2012</p>
                                 </div>
-                                <div data-aos="fade-up" data-aos-duration="2500">
+                                <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <p>
                                         • Finished my secondary education in Science.
                                         </br>
@@ -295,7 +327,7 @@
             </div>
         </div>
         <footer class="mastfoot mt-auto">
-            <div class=" text-center" style="background-color: aliceblue;">
+            <div class=" text-center" style="background-color: rgb(0, 0, 0);">
                 <div class="footer-copyright text-center py-4" style="color: #007bff;">© 2020 Vaishnavi chityala
                 </div>
             </div>
