--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <style>
+        .menu {
+            height: 90vh;
+        }
+    </style>
 </head>
 
 <body class="text-center">
 
-    <div class="d-flex h-100 mx-auto flex-column">
+    <div class="d-flex h-100 mx-auto flex-column mt-0" style="overflow: hidden;">
 
         <header class="masthead mb-auto">
 
