--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <style>
         .menu {
-            height: 90vh;
+            height: 100vh;
+        }
+        
+        @media(max-width: 768px) {
+            body {
+                overflow: hidden;
+            }
         }
     </style>
 </head>
