--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <header class="masthead mb-auto">
 
-            <nav class='navbar navbar-inverse navbar-fixed-top'>
+            <nav class='navbar fixed-top navbar-inverse navbar-fixed-top'>
                 <div class="cross">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
