aboutPage CSS modify

--- a/aboutme.html
+++ b/aboutme.html
@@ -131,7 +131,9 @@
                                         <img class="pb-2 m-0" width="54" src="images/icons/bravelogo.png">
                                     </div>
                                     <div class="col p-0">
-                                        <h5 class="pl-4">Designer</h5>
+                                        <h5 class="pl-4"><span style="font-size: 12px; letter-spacing: 2px; text-transform: uppercase;">
+                                            Designer
+                                        </span></h5>
                                         <p class="pl-4" style="font-size: 14px !important;">BraveOrbit</p>
                                         <p class="pl-4" style="font-size: 12px !important;">2020</p>
                                     </div>
@@ -150,7 +152,9 @@
                                         <img class="pb-2 m-0" width="54" src="images/icons/viperlogo.png">
                                     </div>
                                     <div class="col p-0">
-                                        <h5 class="pl-4">Developer</h5>
+                                        <h5 class="pl-4"><span style="font-size: 12px;  letter-spacing: 2px; text-transform: uppercase;">
+                                            Developer
+                                        </span></h5>
                                         <p class="pl-4" style="font-size: 14px !important;">Viperdev</p>
                                         <p class="pl-4" style="font-size: 12px !important;">2019</p>
                                     </div>
@@ -169,7 +173,11 @@
                                         <img class="pb-2 m-0" width="54" src="images/icons/jslLogo.png">
                                     </div>
                                     <div class="col p-0">
-                                        <h5 class="pl-4">Engineer</h5>
+                                        <h5 class="pl-4">
+                                            <span style="font-size: 12px; letter-spacing: 2px; text-transform: uppercase;">
+                                                Engineer
+                                            </span>
+                                        </h5>
                                         <p class="pl-4" style="font-size: 14px !important;">Jindal Stainless Ltd.</p>
                                         <p class=" pl-4" style="font-size: 12px !important; ">2018-2019</p>
                                     </div>
@@ -191,7 +199,14 @@
                         <div class="p-4 ">
                             <div class="row ">
                                 <div class="col " data-aos="fade-up " data-aos-duration="2500 ">
-                                    <h5>RecycleHero - Viperdev, Hamburg</h5>
+                                    <h5> <span style="font-size: 14px;  letter-spacing: 2px; text-transform: uppercase;">
+
+                                        RecycleHero<br>
+                                        <span class="pl-1" style="font-size: 10px; letter-spacing: 0.5px; text-transform: capitalize;">
+                                            Viperdev, Hamburg
+                                        </span>
+                                        </span>
+                                    </h5>
                                     <div class=" p-4 " data-aos="fade-up " data-aos-duration="2500 ">
                                         <p>
                                             • Cross- platform application for picking up disposals to recycle, while the user can use their valuable time for rational purposes.
@@ -202,7 +217,14 @@
                             </div>
                             <div class="row ">
                                 <div class="col " data-aos="fade-up " data-aos-duration="2500 ">
-                                    <h5>GrunderFlirt - Viperdev, Hamburg</h5>
+                                    <h5> <span style="font-size: 14px;  letter-spacing: 2px; text-transform: uppercase;">
+
+                                        GrunderFlirt<br>
+                                        <span class="pl-1" style="font-size: 10px; letter-spacing: 0.5px; text-transform: capitalize;">
+                                            Viperdev, Hamburg
+                                        </span>
+                                        </span>
+                                    </h5>
                                     <div class=" p-4 " data-aos="fade-up " data-aos-duration="2500 ">
                                         <p>
                                             • Cross-platform application with specific mobile usage to connect with like-minded aspirants and fetching a job across the prefered location.
@@ -215,12 +237,19 @@
                             <div class="row ">
                                 <div class="col ">
                                     <div data-aos="fade-up " data-aos-duration="2500 ">
-                                        <h5> Minor Projects - Viperdev, Hamburg</h5>
+                                        <h5> <span style="font-size: 14px; letter-spacing: 2px; text-transform: uppercase;">
+
+                                            Minor Projects<br>
+                                            <span class="pl-1" style="font-size: 10px; letter-spacing: 0.5px; text-transform: capitalize;">
+                                                Viperdev, Hamburg
+                                            </span>
+                                            </span>
+                                        </h5>
                                     </div>
                                     <div class="p-4 ">
                                         <div data-aos="fade-up " data-aos-duration="2500 ">
-                                            <p>
-                                                Websites:
+                                            <p style="font-size: 12px; opacity: 0.75; letter-spacing: 3px; text-transform: uppercase;">
+                                                Websites
                                             </p>
                                         </div>
                                         <div data-aos="fade-up " data-aos-duration="2500 ">
@@ -242,7 +271,7 @@
 
                         <div class="carded ">
                             <div class="skill ">
-                                <h5>
+                                <h5 style="font-size: 12px; opacity: 0.75; letter-spacing: 3px; text-transform: uppercase;">
                                     <strong>Skills</strong>
                                 </h5>
                             </div>
@@ -265,7 +294,7 @@
                         </div>
                         <div class="carded ">
                             <div class="skill ">
-                                <h5>
+                                <h5 style="font-size: 12px; opacity: 0.75; letter-spacing: 3px; text-transform: uppercase;">
                                     <strong>Tools</strong>
                                 </h5>
                             </div>
@@ -296,8 +325,10 @@
                         <div class="container ">
                             <div class="col ">
                                 <div data-aos="fade-up " data-aos-duration="2500 ">
-                                    <h5>National Institute of Technology Durgapur</h5>
-                                    <p>2018 - 2014</p>
+                                    <h5>
+                                        National Institute of Technology Durgapur
+                                    </h5>
+                                    <p style="font-size: 12px !important;">2018 - 2014</p>
                                 </div>
                                 <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <p>
@@ -310,7 +341,7 @@
                             <div class="col ">
                                 <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <h5>Sri Chaitanya Jr College, Vijayawada</h5>
-                                    <p>2014 - 2012</p>
+                                    <p style="font-size: 12px !important;">2014 - 2012</p>
                                 </div>
                                 <div data-aos="fade-up " data-aos-duration="2500 ">
                                     <p>
