image width issue

--- a/illustrations.html
+++ b/illustrations.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                     <div class="container d-flex justify-content-center">
-                        <img class="w-75" src="images/icons/protfolioTinypng/norma.png" height="auto">
+                        <img class="w-75" src="images/icons/protfolioTinypng/norma.png">
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                     <div class="container d-flex justify-content-center">
-                        <img class="w-75" src="images/icons/protfolioTinypng/digital-art.jpg" height="auto">
+                        <img class="w-75" src="images/icons/protfolioTinypng/digital-art.jpg">
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img class="w-75" src="images/icons/protfolioTinypng/toothless.jpg" height="auto">
+                    <img class="w-75" src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -228,7 +228,7 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img class="w-75" src="images/icons/protfolioTinypng/self-portrait.jpg" height="auto">
+                    <img class="w-75" src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -240,7 +240,7 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img class="w-75" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg" height="auto">
+                    <img class="w-75" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -252,7 +252,7 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
                 <div class="container d-flex justify-content-center">
-                    <img class="w-75" src="images/icons/protfolioTinypng/vector-art.png" height="auto">
+                    <img class="w-75" src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
 
